# colobot-lint

./: .gitignore  ActionFactories.cpp  ActionFactories.h  CMakeLists.txt  ColobotLint.cpp  Jenkinsfile  LICENSE.txt  README.md  RULES.md
.github/workflows/: build.yml
AstMatcherRules/: NakedDeleteRule.cpp  NakedDeleteRule.h  NakedNewRule.cpp  NakedNewRule.h  Rule.h
CMake/: FindTinyXML.cmake
Common/: BeginSourceFileHandler.cpp  ClassofCast.h  ColobotLintConfig.h.in  Context.h  ExclusionZone.h  FilenameHelper.cpp  FilenameHelper.h  FunctionDefinitionContext.h  OutputPrinter.cpp  OutputPrinter.h  PodHelper.cpp  PodHelper.h  RegexConsts.h  RegexHelper.h  Severity.h  SourceFileInfo.h  SourceLocationHelper.cpp  SourceLocationHelper.h  StringRefHash.h  TagTypeMatchers.h  TagTypeNameHelper.h  TextHelper.h  TranslationUnitMatcher.h  UninitializedPodVariableHelper.cpp  UninitializedPodVariableHelper.h
DiagnosticChecker/: DiagnosticChecker.cpp  DiagnosticChecker.h
DiagnosticHandler/: DiagnosticHandler.cpp  DiagnosticHandler.h
Generators/: DependencyGraphGenerator.cpp  DependencyGraphGenerator.h  DeploymentGraphGenerator.cpp  DeploymentGraphGenerator.h  Generator.h  GeneratorsFactory.cpp  GeneratorsFactory.h
Handlers/: BeginSourceFileHandler.cpp  BeginSourceFileHandler.h  DiagnosticHandler.cpp  DiagnosticHandler.h  ExclusionZoneCommentHandler.cpp  ExclusionZoneCommentHandler.h
HtmlReport/: generate.py
HtmlReport/css/: style.css
HtmlReport/img/: COPYING.txt
HtmlReport/js/: interactions.js
Rules/: ASTCallbackRule.h  ASTRule.h  BlockPlacementRule.cpp  BlockPlacementRule.h  BraceInNewLineRule.cpp  BraceInNewLineRule.h  ClassNamingRule.cpp  ClassNamingRule.h  DirectASTConsumerRule.h  EnumNamingRule.cpp  EnumNamingRule.h  FunctionNamingRule.cpp  FunctionNamingRule.h  ImplicitBoolCastRule.cpp  ImplicitBoolCastRule.h  ImplicitCastToBoolRule.cpp  ImplicitCastToBoolRule.h  IncludeStyleRule.cpp  IncludeStyleRule.h  InconsistentDeclarationParameterNameRule.cpp  InconsistentDeclarationParameterNameRule.h  LicenseInHeaderRule.cpp  LicenseInHeaderRule.h  NakedDeleteRule.cpp  NakedDeleteRule.h  NakedNewRule.cpp  NakedNewRule.h  OldStyleFunctionRule.cpp  OldStyleFunctionRule.h  OldStyleNullPointerRule.cpp  OldStyleNullPointerRule.h  PossibleForwardDeclarationRule.cpp  PossibleForwardDeclarationRule.h  Rule.h  RulesFactory.cpp  RulesFactory.h  TodoRule.cpp  TodoRule.h  TokenRule.h  UndefinedFunctionRule.cpp  (+13 more)
Tests/: begin_source_file_handler_test.py  block_placement_rule_test.py  class_naming_rule_test.py  diagnostic_handler_test.py  enum_naming_rule_test.py  fake_header_source_test.py  function_naming_rule_test.py  implicit_bool_cast_rule_test.py  implicit_cast_to_bool_rule_test.py  include_style_rule_test.py  inconsistent_declaration_parameter_name_rule_test.py  license_in_header_rule_test.py  list_tests.py  naked_delete_rule_test.py  naked_new_rule_test.py  old_style_function_rule_test.py  old_style_null_pointer_rule_test.py  output_printer_test.py  possible_forward_declaration_test.py  run_tests.py  source_location_helper_test.py  test_support.py  todo_rule_test.py  undefined_function_rule_test.py  uninitialized_field_rule_test.py  uninitialized_local_variable_rule_test.py  unused_forward_declaration_rule_test.py  variable_naming_rule_test.py  whitespace_rule_test.py
Tools/: count_errors.py
Utils/: OutputPrinter.cpp  OutputPrinter.h
